# KODA

./: .gitignore  Makefile  documentation.md  pyproject.toml  template.tex
koda/: __main__.py  core.py
tests/: test_koda.py
