[tool.poetry]
name = "koda"
version = "0.1.0"
description = ""
authors = ["Michał Rokita <mrokita@mrokita.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
dearpygui = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

